Possible fix - application crashing in case the temporary file does not exist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
         "alwaysStrict": true,
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
-        "lib": ["es2017", "esnext.asynciterable"],
+        "lib": [
+          "es2017",
+          "esnext.asynciterable",
+          "dom"
+        ],
         "module": "commonjs",
         "noEmitOnError": true,
         "noImplicitAny": true,
